feat: add PyPI publishing workflow and update package configuration
- Add pypi-publish.yml workflow for trusted publishing
- Rename package to gemmology-crystal-geometry
- Fix lint/mypy errors and update config
- Ignore E741 for standard crystallographic notation (h,k,l,I)
- Relax mypy numpy array type checking

--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -21,8 +21,9 @@ jobs:
         with:
           python-version: ${{ matrix.python-version }}
 
-      - name: Install dependencies
+      - name: Install dependencies from GitHub (until PyPI publish)
         run: |
+          pip install "gemmology-cdl-parser @ git+https://github.com/gemmology-dev/cdl-parser.git"
           pip install -e ".[dev]"
 
       - name: Lint
