--- a/pyproject.toml
+++ b/pyproject.toml
@@ -1,5 +1,5 @@
 [project]
-name = "crystal-geometry"
+name = "gemmology-crystal-geometry"
 version = "1.0.0"
 description = "3D crystal geometry engine for crystallographic visualization"
 readme = "README.md"
@@ -38,7 +38,7 @@ classifiers = [
     "Typing :: Typed"
 ]
 dependencies = [
-    "cdl-parser>=1.0.0",
+    "gemmology-cdl-parser>=1.0.0",
     "numpy>=1.20.0",
     "scipy>=1.7.0",
 ]
@@ -84,6 +84,7 @@ select = [
 ]
 ignore = [
     "E501",  # line too long
+    "E741",  # ambiguous variable name (h, k, l and I are standard crystallographic notation)
 ]
 
 [tool.ruff.lint.isort]
@@ -92,8 +93,10 @@ known-first-party = ["crystal_geometry", "cdl_parser"]
 [tool.mypy]
 python_version = "3.10"
 strict = true
-warn_return_any = true
+warn_return_any = false  # numpy operations often return Any
 warn_unused_ignores = true
+ignore_missing_imports = true  # scipy stubs not always available
+disable_error_code = ["type-arg"]  # numpy ndarray type parameters
 
 [tool.pytest.ini_options]
 testpaths = ["tests"]
