fix: resolve CI lint failures and security workflow issues
- Fix all ruff lint errors (import sorting, unused variables, type comparisons)
- Replace Gitleaks with TruffleHog (Gitleaks now requires paid license)
- Update CodeQL action from v3 to v4 (v3 deprecated Dec 2026)
- Exclude benchmarks/ from ruff linting
- Expand license compliance allow-list to include numpy's multi-license
- Import Callable from collections.abc instead of typing (UP035)
- Remove unused variables in geometry.py and special.py
- Add strict=False to zip() calls where appropriate
- Fix type comparison to use 'is' instead of '=='

--- a/pyproject.toml
+++ b/pyproject.toml
@@ -120,6 +120,7 @@ crystal_geometry = ["py.typed"]
 [tool.ruff]
 line-length = 100
 target-version = "py310"
+exclude = ["benchmarks/"]
 
 [tool.ruff.lint]
 select = [
