--- a/.github/workflows/security.yml
+++ b/.github/workflows/security.yml
@@ -23,17 +23,17 @@ jobs:
         uses: actions/checkout@v4
 
       - name: Initialize CodeQL
-        uses: github/codeql-action/init@v3
+        uses: github/codeql-action/init@v4
         with:
           languages: python
           # Use extended queries for more comprehensive analysis
           queries: +security-extended,security-and-quality
 
       - name: Autobuild
-        uses: github/codeql-action/autobuild@v3
+        uses: github/codeql-action/autobuild@v4
 
       - name: Perform CodeQL Analysis
-        uses: github/codeql-action/analyze@v3
+        uses: github/codeql-action/analyze@v4
         with:
           category: "/language:python"
 
@@ -133,8 +133,8 @@ jobs:
 
       - name: Verify MIT compatibility
         run: |
-          # List of licenses compatible with MIT
-          pip-licenses --allow-only="MIT;BSD-3-Clause;BSD-2-Clause;Apache-2.0;ISC;PSF-2.0;Python-2.0;LGPL-2.1-or-later;LGPL-3.0-or-later;MPL-2.0;Unlicense;CC0-1.0;Public Domain" || {
+          # List of licenses compatible with MIT (including numpy's multi-license)
+          pip-licenses --allow-only="MIT;MIT License;BSD-3-Clause;BSD-2-Clause;BSD License;0BSD;Apache-2.0;ISC;PSF-2.0;Python-2.0;LGPL-2.1-or-later;LGPL-3.0-or-later;MPL-2.0;Unlicense;CC0-1.0;Zlib;Public Domain" || {
             echo "::warning::Some dependencies may have incompatible licenses. Please review."
             pip-licenses --format=markdown
           }
@@ -148,7 +148,7 @@ jobs:
         with:
           fetch-depth: 0  # Full history for comprehensive scan
 
-      - name: Detect secrets with Gitleaks
-        uses: gitleaks/gitleaks-action@v2
-        env:
-          GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
+      - name: Detect secrets with TruffleHog
+        uses: trufflesecurity/trufflehog@main
+        with:
+          extra_args: --only-verified
